Fix unit dropdown alignment by rendering it in AmountField, and fixing a missed bootstrap case.

--- a/common/sass/styles/overrides/input-groups.scss
+++ b/common/sass/styles/overrides/input-groups.scss
@@ -23,6 +23,17 @@
     margin-bottom: 0;
     margin-top: 0;
     font-size: $font-size-base;
-    padding: .55rem $space-xl;
+    padding: .45rem $space-xl;
+  }
+
+  // Fix for nested dropdown button
+  &:not(:first-child) > .dropdown > .btn {
+    border-top-left-radius: 0;
+    border-bottom-left-radius: 0;
+  }
+
+  &:not(:last-child) > .dropdown > .btn {
+    border-bottom-right-radius: 0;
+    border-top-right-radius: 0;
   }
 }
